--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -28,13 +28,13 @@
         <button onclick="toggleMenu()">&#9776; Menu</button>
 
         <ul id="mainNav" class="hide">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="https://sommerl.github.io/lesson5/preston-5.html#">Preston</a></li>
+            <li class="active"><a href="https://sommerl.github.io/lesson11/index.html">Home</a></li>
+            <li><a href="https://sommerl.github.io/lesson5/preston-5.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
-            <li><a href="https://sommerl.github.io/lesson8/stormcenter.html#">Storm Center</a></li>
-            <li><a href="https://sommerl.github.io/lesson7/gallery-7.html#">Gallery</a></li>
-            <li><a href="https://sommerl.github.io/lesson9/homewireframes.html#">Wireframes</a></li>
+            <li><a href="https://sommerl.github.io/lesson8/stormcenter.html">Storm Center</a></li>
+            <li><a href="https://sommerl.github.io/lesson7/gallery-7.html">Gallery</a></li>
+            <li><a href="https://sommerl.github.io/lesson9/homewireframes.html">Wireframes</a></li>
         </ul>
     </nav>
     <main>
