--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -29,7 +29,7 @@
 
         <ul id="mainNav" class="hide">
             <li class="active"><a href="https://sommerl.github.io/lesson11/index.html">Home</a></li>
-            <li><a href="https://sommerl.github.io/lesson5/preston-5.html">Preston</a></li>
+            <li><a href="https://sommerl.github.io/lesson10/preston.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
             <li><a href="https://sommerl.github.io/lesson8/stormcenter.html">Storm Center</a></li>
