--- a/lesson9/index.html
+++ b/lesson9/index.html
@@ -26,15 +26,13 @@
     </header>
     <nav class="clearfix">
         <button onclick="toggleMenu()">&#9776; Menu</button>
-
         <ul id="mainNav" class="hide">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="https://sommerl.github.io/lesson5/preston-5.html#">Preston</a></li>
-            <li><a href="#">Soda Springs</a></li>
-            <li><a href="#">Fish Haven</a></li>
-            <li><a href="https://sommerl.github.io/lesson8/stormcenter.html#">Storm Center</a></li>
-            <li><a href="https://sommerl.github.io/lesson7/gallery-7.html#">Gallery</a></li>
-            <li><a href="https://sommerl.github.io/lesson9/homewireframes.html#">Wireframes</a></li>
+            <li class="active"><a href="https://sommerl.github.io/lesson9/index.html">Home</a></li>
+            <li><a href="https://sommerl.github.io/lesson10/preston.html">Preston</a></li>
+            <li><a href="https://sommerl.github.io/lesson11/sodasprings.html">Soda Springs</a></li>
+            <li><a href="https://sommerl.github.io/lesson11/fishhaven.html">Fish Haven</a></li>
+            <li><a href="https://sommerl.github.io/lesson8/stormcenter.html">Storm Center</a></li>
+            <li><a href="https://sommerl.github.io/lesson7/gallery.html">Gallery</a></li>
         </ul>
     </nav>
     <main>
