--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -30,11 +30,10 @@
         <ul id="mainNav" class="hide">
             <li class="active"><a href="https://sommerl.github.io/lesson11/index.html">Home</a></li>
             <li><a href="https://sommerl.github.io/lesson10/preston.html">Preston</a></li>
-            <li><a href="#">Soda Springs</a></li>
-            <li><a href="#">Fish Haven</a></li>
+            <li><a href="https://sommerl.github.io/lesson11/fishhaven.html">Soda Springs</a></li>
+            <li><a href="#https://sommerl.github.io/lesson11/sodasprings.html">Fish Haven</a></li>
             <li><a href="https://sommerl.github.io/lesson8/stormcenter.html">Storm Center</a></li>
-            <li><a href="https://sommerl.github.io/lesson7/gallery-7.html">Gallery</a></li>
-            <li><a href="https://sommerl.github.io/lesson9/homewireframes.html">Wireframes</a></li>
+            <li><a href="https://sommerl.github.io/lesson7/gallery.html">Gallery</a></li>
         </ul>
     </nav>
     <main>
