--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -29,14 +29,14 @@
                 <ul id="mainNav" class="hide">
                     <li><a href="https://sommerl.github.io/lesson9/index.html">Home</a></li>
                     <li class="active"><a href="#">Preston</a></li>
-                    <li><a href="https://sommerl.github.io/lesson11/sodasprings.html">Soda Springs</a></li>
-                    <li><a href="https://sommerl.github.io/lesson11/fishhaven.html">Fish Haven</a></li>
+                    <li><a href="#">Soda Springs</a></li>
+                    <li><a href="#">Fish Haven</a></li>
                     <li><a href="https://sommerl.github.io/lesson8/stormcenter.html">Storm Center</a></li>
                     <li><a href="https://sommerl.github.io/lesson7/gallery.html">Gallery</a></li>
                 </ul>
             </nav>
         <main>
-            <h2 class="town">Preston, Idaho</h2>
+            <h2 class="town">Soda Springs, Idaho</h2>
             <div class="herodiv">
                 <img src="images/hero.jpg" alt="banner img" class="banner-image">
             <section class="weathersummary">
@@ -83,5 +83,5 @@
                 </div>
         </footer>
         <script src="js/file.js"></script>
-        <script src="js/preston10.js"></script>
+        <script src="js/sodasprings.js"></script>
 </html>
