--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -1,44 +1,46 @@
 <!DOCTYPE html>
 <html lang="en-us">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Preston Town Page</title>
-        <meta name="description" content="My Weather Site">
-        <link rel="shortcut icon" href="favicon.ico">
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/small.css">
-        <link rel="stylesheet" href="css/medium.css">
-        <link rel="stylesheet" href="css/large.css">
-    </head>
-    <div id="big-banner">
-        Saturday = Preston Pancakes in the Park!  9:00 a.m. Saturday at the city park pavilion.
-        </div>
-    <body>
-        <header>
-            <picture>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Preston Town Page</title>
+    <meta name="description" content="My Weather Site">
+    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/small.css">
+    <link rel="stylesheet" href="css/medium.css">
+    <link rel="stylesheet" href="css/large.css">
+</head>
+<div id="big-banner">
+    Saturday = Preston Pancakes in the Park! 9:00 a.m. Saturday at the city park pavilion.
+</div>
+
+<body>
+    <header>
+        <picture>
             <img src="images/weatherlogoresize.png" alt="weather logo">
-            </picture>
-            <section class="heading">
+        </picture>
+        <section class="heading">
             <h1>Right On Weather</h1>
             <div class="moto">Where it's always "Right On"</div>
         </section>
-        </header>
-            <nav class="clearfix">
-                <button onclick="toggleMenu()">&#9776; Menu</button>
-                <ul id="mainNav" class="hide">
-                    <li><a href="https://sommerl.github.io/lesson9/index.html">Home</a></li>
-                    <li class="active"><a href="#">Preston</a></li>
-                    <li><a href="#">Soda Springs</a></li>
-                    <li><a href="#">Fish Haven</a></li>
-                    <li><a href="https://sommerl.github.io/lesson8/stormcenter.html">Storm Center</a></li>
-                    <li><a href="https://sommerl.github.io/lesson7/gallery.html">Gallery</a></li>
-                </ul>
-            </nav>
-        <main>
-            <h2 class="town">Soda Springs, Idaho</h2>
-            <div class="herodiv">
-                <img src="images/hero.jpg" alt="banner img" class="banner-image">
+    </header>
+    <nav class="clearfix">
+        <button onclick="toggleMenu()">&#9776; Menu</button>
+        <ul id="mainNav" class="hide">
+            <li><a href="https://sommerl.github.io/lesson9/index.html">Home</a></li>
+            <li class="active"><a href="#">Preston</a></li>
+            <li><a href="#">Soda Springs</a></li>
+            <li><a href="#">Fish Haven</a></li>
+            <li><a href="https://sommerl.github.io/lesson8/stormcenter.html">Storm Center</a></li>
+            <li><a href="https://sommerl.github.io/lesson7/gallery.html">Gallery</a></li>
+        </ul>
+    </nav>
+    <main>
+        <h2 class="town">Soda Springs, Idaho</h2>
+        <div class="herodiv">
+            <img src="images/hero.jpg" alt="banner img" class="banner-image">
             <section class="weathersummary">
                 <h3>Weather Summary</h3>
                 <p>Current Temp: <span id="current-temp"></span>&deg; F</p>
@@ -48,40 +50,65 @@
                 <p>Humidity: <span id="humidity"></span>%</p>
                 <p>Wind Speed: <span id="wind-speed"></span> MPH</p>
             </section>
-            </div>
-            <div class="weatherhead">
+        </div>
+        <div class="weatherhead">
             <h3>5 Day Weather Forecast</h3>
-            </div>
-            <div class="forecast">
-                <ul id="five-day-forecast" class="center"></ul>
-            </div>
-            <div class="article">
-                <h3>Preston Boys Take On Skyline</h3>
-                <img src="images/articlepic.jpg" alt="article picture" class="articlepic">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget egestas purus viverra accumsan in nisl nisi scelerisque eu. Adipiscing commodo elit at imperdiet dui accumsan sit amet nulla. Vel turpis nunc eget lorem dolor sed viverra. In nisl nisi scelerisque eu ultrices vitae auctor. Adipiscing bibendum est ultricies integer. Egestas egestas fringilla phasellus faucibus scelerisque eleifend donec pretium. Sit amet luctus venenatis lectus magna fringilla urna. Eget egestas purus viverra accumsan. Sollicitudin tempor id eu nisl nunc mi ipsum faucibus vitae. Iaculis urna id volutpat lacus laoreet non curabitur gravida. Eget gravida cum sociis natoque penatibus et magnis dis parturient. Nisl pretium fusce id velit ut tortor pretium viverra. Viverra aliquet eget sit amet tellus cras adipiscing. Felis donec et odio pellentesque diam volutpat commodo sed. Varius duis at consectetur lorem donec massa sapien faucibus. Pellentesque massa placerat duis ultricies lacus sed turpis. Consectetur a erat nam at lectus urna.</p>
-                <p>Quis hendrerit dolor magna eget est lorem ipsum dolor sit. Vestibulum rhoncus est pellentesque elit ullamcorper. Tempor orci eu lobortis elementum nibh tellus. Diam maecenas ultricies mi eget mauris pharetra. Suspendisse potenti nullam ac tortor vitae purus faucibus ornare suspendisse. Accumsan sit amet nulla facilisi morbi tempus iaculis. Non odio euismod lacinia at. Eu volutpat odio facilisis mauris sit amet massa vitae tortor. Varius vel pharetra vel turpis. Mi in nulla posuere sollicitudin aliquam ultrices.</p>
-            </div>
-             </div>
-        </main>
-        <footer>
-            <div class="contactmap">
-                <img src="images/prestonmap.png" alt="map" class="prestonmap">
-                <div class="contactinfo">
+        </div>
+        <div class="forecast">
+            <ul id="five-day-forecast" class="center"></ul>
+        </div>
+        <div class="article">
+            <h3>Preston Boys Take On Skyline</h3>
+            <img src="images/articlepic.jpg" alt="article picture" class="articlepic">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Eget egestas purus viverra accumsan in nisl nisi scelerisque eu. Adipiscing commodo
+                elit at imperdiet dui accumsan sit amet nulla. Vel turpis nunc eget lorem dolor sed viverra. In nisl
+                nisi scelerisque eu ultrices vitae auctor. Adipiscing bibendum est ultricies integer. Egestas egestas
+                fringilla phasellus faucibus scelerisque eleifend donec pretium. Sit amet luctus venenatis lectus magna
+                fringilla urna. Eget egestas purus viverra accumsan. Sollicitudin tempor id eu nisl nunc mi ipsum
+                faucibus vitae. Iaculis urna id volutpat lacus laoreet non curabitur gravida. Eget gravida cum sociis
+                natoque penatibus et magnis dis parturient. Nisl pretium fusce id velit ut tortor pretium viverra.
+                Viverra aliquet eget sit amet tellus cras adipiscing. Felis donec et odio pellentesque diam volutpat
+                commodo sed. Varius duis at consectetur lorem donec massa sapien faucibus. Pellentesque massa placerat
+                duis ultricies lacus sed turpis. Consectetur a erat nam at lectus urna.</p>
+            <p>Quis hendrerit dolor magna eget est lorem ipsum dolor sit. Vestibulum rhoncus est pellentesque elit
+                ullamcorper. Tempor orci eu lobortis elementum nibh tellus. Diam maecenas ultricies mi eget mauris
+                pharetra. Suspendisse potenti nullam ac tortor vitae purus faucibus ornare suspendisse. Accumsan sit
+                amet nulla facilisi morbi tempus iaculis. Non odio euismod lacinia at. Eu volutpat odio facilisis mauris
+                sit amet massa vitae tortor. Varius vel pharetra vel turpis. Mi in nulla posuere sollicitudin aliquam
+                ultrices.</p>
+        </div>
+        </div>
+        <div class="eventinfo">
+            <h2>Events</h2>
+        </div>
+    </main>
+    <footer>
+        <div class="contactmap">
+            <img src="images/prestonmap.png" alt="map" class="prestonmap">
+            <div class="contactinfo">
                 <h3>Contact Information:</h3>
                 <p>&#9742;: 888-888-8888</p>
                 <p>&#9993;: rightonweather@gmail.com</p>
-                </div>
-                <div class="social">
-                    <h3>Social:</h3>
-                    <a href="https://www.facebook.com/" target="_blank"><img src="https://cdn.glitch.com/8f8d0525-162d-42b7-945e-da0caec38f0f%2Ffacebook%20logo.png?v=1580410627161" alt="facebook logo"></a>
-                   <a href="https://www.youtube.com/" target="_blank"><img src="https://cdn.glitch.com/486b6a3e-32c5-4c38-868b-097eac15d4dd%2FScreen%20Shot%202020-01-28%20at%2010.34.12%20AM.png?v=1580233068298" alt="Youtube icon"></a>
-                   <a href="https://www.twitter.com/" target="_blank"><img src="https://cdn.glitch.com/486b6a3e-32c5-4c38-868b-097eac15d4dd%2FScreen%20Shot%202020-01-28%20at%2010.34.21%20AM.png?v=1580233060662" alt="Twitter icon"></a>
-                 </div>
-                 </div>
-                &#169; Right On Weather | Attributions | Laura Sommer
-                <div id="updated">
-                </div>
-        </footer>
-        <script src="js/file.js"></script>
-        <script src="js/sodasprings.js"></script>
+            </div>
+            <div class="social">
+                <h3>Social:</h3>
+                <a href="https://www.facebook.com/" target="_blank"><img
+                        src="https://cdn.glitch.com/8f8d0525-162d-42b7-945e-da0caec38f0f%2Ffacebook%20logo.png?v=1580410627161"
+                        alt="facebook logo"></a>
+                <a href="https://www.youtube.com/" target="_blank"><img
+                        src="https://cdn.glitch.com/486b6a3e-32c5-4c38-868b-097eac15d4dd%2FScreen%20Shot%202020-01-28%20at%2010.34.12%20AM.png?v=1580233068298"
+                        alt="Youtube icon"></a>
+                <a href="https://www.twitter.com/" target="_blank"><img
+                        src="https://cdn.glitch.com/486b6a3e-32c5-4c38-868b-097eac15d4dd%2FScreen%20Shot%202020-01-28%20at%2010.34.21%20AM.png?v=1580233060662"
+                        alt="Twitter icon"></a>
+            </div>
+        </div>
+        &#169; Right On Weather | Attributions | Laura Sommer
+        <div id="updated">
+        </div>
+    </footer>
+    <script src="js/file.js"></script>
+    <script src="js/sodasprings.js"></script>
+
 </html>
