--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -87,11 +87,10 @@
                 </select>
                 </label>
 
-            <label class="sbs">Are you in danger?
+            <label class="sbs">Are you in danger?</label>
             <label class="sbs"><input type="radio" name="danger" value="yes">Yes</label>
             <label class="sbs"><input type="radio" name="danger" value="maybe">Maybe</label>
             <label class="sbs"><input type="radio" name="danger" value="no">No</label>
-            </label>
         </fieldset>
 
         <fieldset>
@@ -99,14 +98,14 @@
             <label><textarea id="infocomments" name="infocomments" rows="5" cols="50"></textarea></label>
         </fieldset>
 
-        <input type="submit" value="Report Storm" class="submitBtn" href="">
+        <input type="submit" value="Report Storm" class="submitBtn">
 
     </form>
         </main>
         <footer>
         </div>
         &#169; Right On Weather | Attributions | Laura Sommer
-        <div id="updated">
+        <div id="updated"></div>
         </footer>
         <script src="js/stormcenter.js"></script>
     </body>
