--- a/lesson11/fishhaven.html
+++ b/lesson11/fishhaven.html
@@ -62,6 +62,9 @@
                 <p>Quis hendrerit dolor magna eget est lorem ipsum dolor sit. Vestibulum rhoncus est pellentesque elit ullamcorper. Tempor orci eu lobortis elementum nibh tellus. Diam maecenas ultricies mi eget mauris pharetra. Suspendisse potenti nullam ac tortor vitae purus faucibus ornare suspendisse. Accumsan sit amet nulla facilisi morbi tempus iaculis. Non odio euismod lacinia at. Eu volutpat odio facilisis mauris sit amet massa vitae tortor. Varius vel pharetra vel turpis. Mi in nulla posuere sollicitudin aliquam ultrices.</p>
             </div>
              </div>
+            <div class="eventinfo">
+                <h2>Events</h2>
+            </div>
         </main>
         <footer>
             <div class="contactmap">
