--- a/lesson10/preston.html
+++ b/lesson10/preston.html
@@ -83,4 +83,5 @@
         </footer>
         <script src="js/file.js"></script>
         <script src="js/preston10.js"></script>
+        </body>
 </html>
