--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -29,7 +29,7 @@
                     <li><a href="https://sommerl.github.io/lesson10/preston.html">Preston</a></li>
                     <li><a href="https://sommerl.github.io/lesson11/sodasprings.html">Soda Springs</a></li>
                     <li><a href="https://sommerl.github.io/lesson11/fishhaven.html">Fish Haven</a></li>
-                    <li class= "active"><a href="https://sommerl.github.io/lesson8/stormcenter.html"></a>Storm Center</a></li>
+                    <li class= "active"><a href="https://sommerl.github.io/lesson8/stormcenter.html">Storm Center</a></li>
                     <li><a href="https://sommerl.github.io/lesson7/gallery.html">Gallery</a></li>
                 </ul>
             </nav>
