--- a/lesson11/fishhaven.html
+++ b/lesson11/fishhaven.html
@@ -28,9 +28,9 @@
                 <button onclick="toggleMenu()">&#9776; Menu</button>
                 <ul id="mainNav" class="hide">
                     <li><a href="https://sommerl.github.io/lesson9/index.html">Home</a></li>
-                    <li><a href="https://sommerl.github.io/lesson10/preston.html">Preston</a></li>
-                    <li><a href="#">Soda Springs</a></li>
-                    <li class="active"><a href="#">Fish Haven</a></li>
+                    <li><a href="#">Preston</a></li>
+                    <li><a href="https://sommerl.github.io/lesson11/sodasprings.html">Soda Springs</a></li>
+                    <li class="active"><a href="https://sommerl.github.io/lesson11/fishhaven.html">Fish Haven</a></li>
                     <li><a href="https://sommerl.github.io/lesson8/stormcenter.html">Storm Center</a></li>
                     <li><a href="https://sommerl.github.io/lesson7/gallery.html">Gallery</a></li>
                 </ul>
