--- a/lesson10/preston.html
+++ b/lesson10/preston.html
@@ -30,7 +30,7 @@
         <button onclick="toggleMenu()">&#9776; Menu</button>
         <ul id="mainNav" class="hide">
             <li><a href="https://sommerl.github.io/lesson9/index.html">Home</a></li>
-            <li class="active"><a href="#">Preston</a></li>
+            <li class="active"><a href="">Preston</a></li>
             <li><a href="https://sommerl.github.io/lesson11/sodasprings.html">Soda Springs</a></li>
             <li><a href="https://sommerl.github.io/lesson11/fishhaven.html">Fish Haven</a></li>
             <li><a href="https://sommerl.github.io/lesson8/stormcenter.html">Storm Center</a></li>
