--- a/lesson10/preston.html
+++ b/lesson10/preston.html
@@ -78,6 +78,9 @@
                 sit amet massa vitae tortor. Varius vel pharetra vel turpis. Mi in nulla posuere sollicitudin aliquam
                 ultrices.</p>
         </div>
+        <div class="eventinfo">
+            <h2>Events</h2>
+        </div>
     </main>
     <footer>
         <div class="contactmap">
