--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -26,9 +26,12 @@
                     <li><strong>Lesson 04: </strong> <a href="https://sommerl.github.io/lesson4/preston-4.html">Assignment Link</a></li>
                     <li><strong>Lesson 05: </strong> <a href="https://sommerl.github.io/lesson5/preston-5.html">Assignment Link</a></li>
                     <li><strong>Lesson 06: </strong> <a href="https://sommerl.github.io/lesson6/preston-6.html">Assignment Link</a></li>
-                    <li><strong>Lesson 07: </strong> <a href="https://sommerl.github.io/lesson7/gallery-7.html#">Assignment Link</a></li>
-                    <li><strong>Lesson 08: </strong> <a href="https://sommerl.github.io/lesson8/stormcenter.html#">Assignment Link</a></li>
-                    <li><strong>Lesson 09: </strong> <a href="https://sommerl.github.io/lesson9/index.html#">Assignment Link</a></li>
+                    <li><strong>Lesson 07: </strong> <a href="https://sommerl.github.io/lesson7/gallery-7.html">Assignment Link</a></li>
+                    <li><strong>Lesson 08: </strong> <a href="https://sommerl.github.io/lesson8/stormcenter.html">Assignment Link</a></li>
+                    <li><strong>Lesson 09: </strong> <a href="https://sommerl.github.io/lesson9/index.html">Assignment Link</a></li>
+                    <li><strong>Lesson 10: </strong> <a href="https://sommerl.github.io/lesson10/preston.html">Assignment Link</a></li>
+                    <li><strong>Lesson 11: </strong> <a href="https://sommerl.github.io/lesson9/index.html">Assignment Link</a></li>
+                    
                 </ul>
             </nav>
                 </div>
