--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -30,7 +30,7 @@
                     <li><strong>Lesson 08: </strong> <a href="https://sommerl.github.io/lesson8/stormcenter.html">Assignment Link</a></li>
                     <li><strong>Lesson 09: </strong> <a href="https://sommerl.github.io/lesson9/index.html">Assignment Link</a></li>
                     <li><strong>Lesson 10: </strong> <a href="https://sommerl.github.io/lesson10/preston.html">Assignment Link</a></li>
-                    <li><strong>Lesson 11: </strong> <a href="https://sommerl.github.io/lesson9/index.html">Assignment Link</a></li>
+                    <li><strong>Lesson 11: </strong> <a href="https://sommerl.github.io/lesson11/fishhaven.html"> <a href="https://sommerl.github.io/lesson11/sodasprings.html">Assignment Link</a></li>
                     
                 </ul>
             </nav>
