--- a/lesson12/index.html
+++ b/lesson12/index.html
@@ -12,9 +12,9 @@
 
 <body>
     <header>
-        <h1>Right On Weather: Site Plan</h1>
+        <h1>Scoots: Site Plan</h1>
         <h2>Laura Sommer</h2>
-        <h2>Right On Weather</h2>
+        <h2>Scoots Motor Scooter Rentals</h2>
         <nav>
             <ul>
                 <li><a href="index.html">Site Purpose</a></li>
@@ -34,8 +34,6 @@
             that takes place on the Island of Cozumel. These rentals will help individuals to be able to visit the
             touristy western part of the Island, with easy access to different areas when they rent with us at Scoots.
         </p>
-        <h2>Available Domain</h2>
-        <p>rightonweather.com</p>
         <h2>Scoots Logo</h2>
         <img src="" alt="">
     </main>
