--- a/lesson12/target-audience.html
+++ b/lesson12/target-audience.html
@@ -1,64 +1,82 @@
 <!DOCTYPE html>
 <html lang="en-us">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Target Audience</title>
-        <meta name="description" content="Target Audience">
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/target.css">
-    </head>
-    <body>
-        <header>
-            <h1>Right On Weather</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Site Purpose</a></li>
-                    <li><a href="target-audience.html">Target Audience</a></li>
-                    <li><a href="color-scheme.html">Color Scheme</a></li>
-                    <li><a href="typography.html">Typography</a></li>
-                </ul>
-            </nav>
-        </header>
-        <main>
-            <h1>Target Audience</h1>
-            <p>This website is for anyone who needs to know the weather on a daily basis. It is especially helpful to those who enjoy doing outdoor activities, traveling, and for planning different events. </p>
-            <br>
-            <h2>Persona 1</h2>
-            <h3>Persona: Dad (John Barlow)</h3>
-            <p>John Barlow is a 40 year old man married to his wife Jane. They have four children between the ages of 5-12. He works as an electrical engineer and his wife is a stay at home Mom. Some of the families favortite things to do together include spending time camping, traveling, hiking, and enjoying time in the outdoors. Something that is is important to John is spending quality time and making memories with his family.</p>
-            <br>
-            <h3>Scenarios</h3>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Target Audience</title>
+    <meta name="description" content="Target Audience">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/target.css">
+</head>
+
+<body>
+    <header>
+        <h1>Scoots</h1>
+        <h2>Motor Scooter Rentals</h2>
+        <nav>
             <ul>
-                <li>John is planning to go on a camping trip for the weekend with his family, but is trying to decide where they should go for good weather.</li>
-                <li>John loves to watch football, but none of kids play. He wants to find out when the highschool football game is for the weekend is.</li>
-                <li>John and his wife Jane have planned a fun family swim day, and want to make sure the weather is going to be good, so that they can enjoy the day together.</li>
-                <li>John's family loves the Fall time around Halloween, and he wants to know what kind of Halloween events are happening that they could attend together.</li>
-                <li>John and his family want to have some friends over for a BBQ, but he wants to make sure it will be good weather before planning or inviting anyone.</li>
+                <li><a href="index.html">Site Purpose</a></li>
+                <li><a href="target-audience.html">Target Audience</a></li>
+                <li><a href="color-scheme.html">Color Scheme</a></li>
+                <li><a href="typography.html">Typography</a></li>
             </ul>
-            <br>
-            <br>
-            <h2>Persona 2</h2>
-            <h3>Persona: High School Student (Sam Chavez)</h3>
-            <p>Sam Chavez, 16 is a Junior in high school who is on the high school varsity soccer team. He is the oldest out of his 5 siblings. Other than playing soccer he enjoy spending time with his family and friends, and mountain biking. He also loves to spend time and play with his dog, Tucker. </p>
-            <br>
-            <h3>Scenarios</h3>
-            <ul>
-                <li>Sam has soccer practice each day after school. When he is packing his gear for practice he wants to know the weather, to make sure he bring a jacket if it is going to be cold or rainy.</li>
-                <li>When Sam gets home from soccer practice he wants to take his dog Tucker to the park to play fetch if the weather is going to be nice.</li>
-                <li>Sam and his friends are wanting to get together and do something fun over the weekend. They want to see if there is anything happening in the community that would be fun to attend.</li>
-                <li>Sam has an home soccer game. He wants to make sure that it has been announcement in the community. This way they can have more support at their games.</li>
-                <li>Sam is going on a day trip for one of his classes, and wants to know what he should wear for the day. Depending on whether it's hot or cold.</li>
-            </ul>
-        </main>
-        <footer>
-            <span>
-                &copy; <span id="year"></span> | Laura Sommer | Logan, Utah | <a
-                    href="https://www.byui.edu/online" target="_blank">BYU-Idaho Online Learning</a>
-            </span>
-            <br>
-            <span id="lastupdated"></span>
-        </footer>
-        <script src="js/file.js"></script>
-    </body>
+        </nav>
+    </header>
+    <main>
+        <h1>Target Audience</h1>
+        <p>This website is for anyone who is looking for one of the greatest and easiest ways to visit all the amazing
+            and beautiful destinations found on the island of Conzumel. It also provides a way for those who have a trip
+            planed, are interested in planning a trip, or are already on the Island of Cozumel to make reservations for
+            scooters, jeeps, and side-by-side ATVs while they are on the island. It helps explain the different rental
+            locations, different catering options available, and help those who want to have all the details of their
+            trip planned out. It also helps to show and reflect the fun that takes place on the Island of Cozumel.</p>
+        <br>
+        <h2>Persona 1</h2>
+        <h3>Persona: Sarah Call</h3>
+        <p>Sarah is a 45 year old women. Her and her husband have six kids. They enjoy traveling together, spending time
+            in the outdoors, and playing and watching sports. Sarah works from home for the Blue Sea Cruise Ship
+            Company, and during her other free time is a stay at home mom.</p>
+        <br>
+        <h3>Scenarios</h3>
+        <ul>
+            <li>Sarah has been assigned by her manager at Blue Sea Cruise Ship to find a company located on the island
+                Cozumel, where the company can rent out scooters for each of their employees they are taking on a
+                company trip.</li>
+            <li>Sarah and her husband want to plan a trip to the island Conzumel located off the coast of Mexico. They
+                talked about things they wanted to do as a family, and her son John wants to rent scooters to go sight
+                seeing around the island.</li>
+        </ul>
+        <br>
+        <br>
+        <h2>Persona 2</h2>
+        <h3>Persona: Sam Chavez</h3>
+        <p>Sam Chavez, 18, just graduated from high school. He is the oldest out
+            of his 5 siblings. He enjoys playing soccer, spending time with his family and friends, and
+            mountain biking. He also loves to spend time and play with his dog, Tucker. Sam is starting his first Summer
+            of summer sales.</p>
+        <br>
+        <h3>Scenarios</h3>
+        <ul>
+            <li>Sam's summer sale's company has planned a trip to take everyone in their company to the island of
+                Conzumel to kick of the start to their selling season. In the instruction packet for the trip he is
+                repsonsible to find a way for himself to easily get around on the island. They recommened renting a
+                scooter to make for easily traveling to different locations on the island.</li>
+            <li>Sam's parents are taking him on a senior trip to Conzumel, an island located off the coast of Mexico in
+                the western Caribbean Sea. Something he wants to do is for each of them to rent scooters to easily get
+                to different destinations on the island without having to be worried about getting caught in traffic.
+            </li>
+        </ul>
+    </main>
+    <footer>
+        <span>
+            &copy; <span id="year"></span> | Laura Sommer | Logan, Utah | <a href="https://www.byui.edu/online"
+                target="_blank">BYU-Idaho Online Learning</a>
+        </span>
+        <br>
+        <span id="lastupdated"></span>
+    </footer>
+    <script src="js/file.js"></script>
+</body>
+
 </html>
