--- a/lesson12/typography.html
+++ b/lesson12/typography.html
@@ -10,7 +10,8 @@
     </head>
     <body>
         <header>
-            <h1>Right On Weather</h1>
+            <h1>Scoots</h1>
+            <h2>Motor Scooter Rentals</h2>
             <nav>
                 <ul>
                     <li><a href="index.html">Site Purpose</a></li>
