--- a/lesson12/color-scheme.html
+++ b/lesson12/color-scheme.html
@@ -10,7 +10,8 @@
     </head>
     <body>
         <header>
-            <h1>Right On Weather</h1>
+            <h1>Scoots</h1>
+            <h2>Motor Scooter Rentals</h2>
             <nav>
                 <ul>
                     <li><a href="index.html">Site Purpose</a></li>
@@ -22,11 +23,11 @@
         </header>
         <main>
             <h1>Color Scheme</h1>
-            <h2>This is the heading text color. The heading color HEX: #010227. RGB: 1, 2, 39.</h2>
-            <p>This is the paragraph text color. The paragraph color HEX: #00507A. RGB: 0, 80, 122.</p>
-            <p>The backround colors HEX: #BCF8EC. RGB: 188, 248, 236.</p>
+            <h2>This is the heading text color. The heading color HEX: #27497F. RGB: 39, 73, 127.</h2>
+            <p>This is the paragraph text color. The paragraph color HEX: #27497F. RGB: 39, 73, 127.</p>
+            <p>These are some of the other accent colors. HEX: ##99C1FF, RGB: 153, 193, 255. HEX: #FFFFFF, RGB: 255, 255, 255.</p>
             <br>
-            <p>Note: These colors will be used in other aspects of the HTML page, other than just the text color. There is also my accent color that is shown in the main section.</p>
+            <p>Note: These colors will be used in other aspects of the HTML page, and may not be held specfic to the certain elements defined.</p>
         </main>
         <footer>
             <footer>
