--- a/lesson12/color-scheme.html
+++ b/lesson12/color-scheme.html
@@ -25,7 +25,7 @@
             <h1>Color Scheme</h1>
             <h2>This is the heading text color. The heading color HEX: #27497F. RGB: 39, 73, 127.</h2>
             <p>This is the paragraph text color. The paragraph color HEX: #27497F. RGB: 39, 73, 127.</p>
-            <p>These are some of the other accent colors. HEX: ##99C1FF, RGB: 153, 193, 255. HEX: #FFFFFF, RGB: 255, 255, 255.</p>
+            <p>These are some of the other accent colors. HEX: #99C1FF, RGB: 153, 193, 255. HEX: #FFFFFF, RGB: 255, 255, 255.</p>
             <br>
             <p>Note: These colors will be used in other aspects of the HTML page, and may not be held specfic to the certain elements defined.</p>
         </main>
