--- a/lesson12/target-audience.html
+++ b/lesson12/target-audience.html
@@ -18,8 +18,10 @@
             <ul>
                 <li><a href="index.html">Site Purpose</a></li>
                 <li><a href="target-audience.html">Target Audience</a></li>
+                <li><a href="sitemap.html">Site Map</a></li>
                 <li><a href="color-scheme.html">Color Scheme</a></li>
                 <li><a href="typography.html">Typography</a></li>
+                <li><a href="wireframes.html">Wireframes</a></li>
             </ul>
         </nav>
     </header>
