--- a/scoots/home.html
+++ b/scoots/home.html
@@ -12,9 +12,9 @@
 
 <body>
     <header>
-        <h1>Scoots: Site Plan</h1>
-        <h2>Laura Sommer</h2>
-        <h2>Scoots Motor Scooter Rentals</h2>
+        <h1>Scoots</h1>
+        <h2>Motor Scooter Rentals</h2>
+        <img src="" alt="">
         <nav>
             <ul>
                 <li><a href="">Home</a></li>
@@ -26,6 +26,22 @@
         </nav>
     </header>
     <main>
+        <h2 class="welcome">Welcome</h2>
+        <div class="herodiv">
+            <img src="" alt="banner img" class="banner-image">
+        </div>
+        <div class="rentaltype">
+            <h2>Types of Rentals</h2>
+            <p>Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix ad putent delectus
+                delicata usu. Vidit dissentiet eos cu eum an brute copiosae hendrerit. Eos erant dolorum an. Per facer
+                affert ut. Mei iisque mentitum moderatius cu. Sit munere facilis accusam eu dicat falli consulatu at
+                vis. Te facilisis mnesarchum qui posse omnium mediocritatem est cu. Modus argumentum ne qui tation
+                efficiendi in eos. Ei mea falli legere efficiantur et tollit aliquip debitis mei. No deserunt
+                mediocritatem mel. Lorem ipsum dolor sit amet et delectus</p>
+        </div>
+        <div>
+            <img src="" alt="">
+        </div>
     </main>
     <footer>
         <span>
