--- a/lesson12/index.html
+++ b/lesson12/index.html
@@ -38,6 +38,8 @@
         </p>
         <h2>Scoots Logo</h2>
         <img src="" alt="">
+        <h3>Logo PNG Credit:</h3>
+        <p><a href='https://pngtree.com/so/icons-converter'>icons converter png from pngtree.com</a></p>
     </main>
     <footer>
         <span>
