--- a/lesson12/index.html
+++ b/lesson12/index.html
@@ -40,6 +40,7 @@
         <img src="" alt="">
         <h3>Logo PNG Credit:</h3>
         <p><a href='https://pngtree.com/so/icons-converter'>icons converter png from pngtree.com</a></p>
+        <p><a href='https://pngtree.com/so/logo-icons'>logo icons png from pngtree.com</a></p>
     </main>
     <footer>
         <span>
