--- a/lesson12/color-scheme.html
+++ b/lesson12/color-scheme.html
@@ -25,11 +25,14 @@
         </header>
         <main>
             <h1>Color Scheme</h1>
-            <h2>This is the heading text color. The heading color HEX: #27497F. RGB: 39, 73, 127.</h2>
+            <h2>This is the heading text color. The heading color HEX: #1d3557. RGB: 29, 53, 87.</h2>
             <p>This is the paragraph text color. The paragraph color HEX: #27497F. RGB: 39, 73, 127.</p>
-            <p>These are some of the other accent colors. HEX: #99C1FF, RGB: 153, 193, 255. HEX: #FFFFFF, RGB: 255, 255, 255.</p>
+            <p>These are some of the other accent colors. HEX: #99C1FF, RGB: 153, 193, 255. HEX: #FFFFFF, RGB: 255, 255, 255. HEX: #007236, RGB: 0, 114, 54.</p>
             <br>
             <p>Note: These colors will be used in other aspects of the HTML page, and may not be held specfic to the certain elements defined.</p>
+            <br>
+            <h2>Color Palette</h2>
+            <img src="images/Color Palette.png" alt="Color Palette">
         </main>
         <footer>
             <footer>
