--- a/lesson12/wireframes.html
+++ b/lesson12/wireframes.html
@@ -28,7 +28,18 @@
     </header>
     <main>
         <h2>Home Page Wireframe</h2>
-        <img src="images/homewireframe.png" alt="wireframe" >
+        <p>Large View</p>
+        <img src="images/largewireframe.png" alt="wireframe" >
+        <br>
+        <br>
+        <br>
+        <p>Medium View</p>
+        <img src="images/mediumwireframe.png" alt="wireframe" >
+        <br>
+        <br>
+        <br>
+        <p>Small View</p>
+        <img src="images/smallwireframe.png" alt="wireframe" >
     </main>
     <footer>
         <span>
