--- a/scoots/home.html
+++ b/scoots/home.html
@@ -14,7 +14,7 @@
     <header>
         <h1>Scoots</h1>
         <h2>Motor Scooter Rentals</h2>
-        <img src="" alt="">
+        <img src="images/FinalLogoScoots.png" alt="Scoots Logo">
         <nav>
             <ul>
                 <li><a href="">Home</a></li>
