--- a/lesson12/index.html
+++ b/lesson12/index.html
@@ -37,7 +37,7 @@
             touristy western part of the Island, with easy access to different areas when they rent with us at Scoots.
         </p>
         <h2>Scoots Logo</h2>
-        <img src="" alt="">
+        <img src="images/FinalLogoScoots.png" alt="Scoots Logo">
         <h3>Logo PNG Credit:</h3>
         <p><a href='https://pngtree.com/so/icons-converter'>icons converter png from pngtree.com</a></p>
         <p><a href='https://pngtree.com/so/logo-icons'>logo icons png from pngtree.com</a></p>
